client da_pai ok

--- a/client/laya/pages/test/GameTable.ui
+++ b/client/laya/pages/test/GameTable.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1305,
-    "selecteID":1306,
+    "selectedBox":82,
+    "selecteID":1228,
     "props":{"width":1920,"var":"turntableDong","text":"剩余：7盘","sizeGrid":"70,70,70,70,1","sceneColor":"#000000","sceneBg":"laya/views/test/GameTable.jpg","height":1080},
     "nodeParent":-1,
     "label":"View(turntableDong)",
@@ -788,13 +788,14 @@
                     "props":{"y":344,"x":861,"width":130,"var":"turntable","scaleY":2,"scaleX":2,"height":130},
                     "nodeParent":8,
                     "label":"Image(turntable)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":3,
                     "child":[
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":130,"var":"turntableCenter","height":130},
                             "nodeParent":3,
@@ -872,6 +873,7 @@
                             "$HIDDEN":false
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":47,"x":36,"width":30,"var":"turntableNum1","skin":"ui/game/0.png","height":40},
                             "nodeParent":3,
@@ -885,6 +887,7 @@
                             "$HIDDEN":false
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":47,"x":64,"var":"turntableNum0","skin":"ui/game/0.png"},
                             "nodeParent":3,
@@ -897,11 +900,12 @@
                                 ]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":112,"x":-49,"var":"leftPaiCountSprite","scaleY":0.75,"scaleX":0.75},
                             "nodeParent":3,
                             "label":"Sprite(leftPaiCountSprite)",
-                            "isOpen":true,
+                            "isOpen":false,
                             "isDirectory":true,
                             "isAniNode":true,
                             "hasChild":true,
@@ -955,14 +959,13 @@
                     "props":{"y":93,"x":192,"width":104,"var":"shouPai0","scaleY":0.65,"scaleX":0.65,"height":1102},
                     "nodeParent":8,
                     "label":"Sprite(shouPai0)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":229,
                     "child":[
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":-3,"x":0,"visible":false,"var":"test_shoupai0","skin":"ui/majiang/ce_bg.png"},
                             "nodeParent":229,
@@ -974,7 +977,6 @@
                             "compId":1303,
                             "child":[
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":7.105427357601002e-14,"x":0,"var":"test_shoupai0_image","skin":"ui/majiang/ce_18.png"},
                                     "nodeParent":1303,
@@ -985,17 +987,16 @@
                                     "compId":1304,
                                     "child":[
                                         ],
-                                    "$HIDDEN":true
+                                    "$HIDDEN":false
                                 }],
                             "$HIDDEN":false
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":104,"var":"chi0","height":212.00000000000006},
                             "nodeParent":229,
                             "label":"Sprite(chi0)",
-                            "isOpen":false,
+                            "isOpen":true,
                             "isDirectory":true,
                             "isAniNode":true,
                             "hasChild":true,
@@ -1077,7 +1078,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":412,"x":0,"width":104,"var":"anGangHide0","height":207},
                             "nodeParent":229,
@@ -1138,7 +1138,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":208,"x":0,"width":104,"var":"anGang0","height":207},
                             "nodeParent":229,
@@ -1213,7 +1212,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":616,"x":0,"width":104,"var":"mingGang0","height":212},
                             "nodeParent":229,
@@ -1330,7 +1328,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":828,"x":0,"width":53,"var":"shou0","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":229,
@@ -1343,7 +1340,6 @@
                                 ]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":970,"x":0,"width":53,"var":"fa0","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":229,
@@ -1723,14 +1719,13 @@
                     "props":{"y":100,"x":1721,"width":104,"var":"shouPai2","scaleY":0.65,"scaleX":-0.65,"height":1102},
                     "nodeParent":8,
                     "label":"Sprite(shouPai2)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":1187,
                     "child":[
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":0,"x":0,"var":"test_shoupai2","skin":"ui/majiang/ce_bg.png"},
                             "nodeParent":1187,
@@ -1742,7 +1737,6 @@
                             "compId":1305,
                             "child":[
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":7.105427357601002e-14,"x":0,"var":"test_shoupai2_image","skin":"ui/majiang/ce_18.png"},
                                     "nodeParent":1305,
@@ -1756,7 +1750,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":104,"var":"chi2","height":212},
                             "nodeParent":1187,
@@ -1842,7 +1835,6 @@
                             "$HIDDEN":true
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":412,"x":0,"width":104,"var":"anGangHide2","height":207},
                             "nodeParent":1187,
@@ -1903,7 +1895,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":208,"x":0,"width":104,"var":"anGang2","height":207},
                             "nodeParent":1187,
@@ -1975,7 +1966,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":616,"x":0,"width":104,"var":"mingGang2","height":212},
                             "nodeParent":1187,
@@ -2080,7 +2070,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":828,"x":0,"width":53,"var":"shou2","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":1187,
@@ -2093,7 +2082,6 @@
                                 ]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":970,"x":0,"width":53,"var":"fa2","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":1187,
@@ -4615,13 +4603,14 @@
                     "props":{"y":839,"x":54.99999999999999,"width":1227,"var":"shouPai3","scaleY":1.4,"scaleX":1.4,"height":172},
                     "nodeParent":8,
                     "label":"Sprite(shouPai3)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":82,
                     "child":[
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":0,"width":250,"var":"chi3","height":128},
                             "nodeParent":82,
@@ -4706,6 +4695,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":508,"width":250,"var":"anGangHide3","height":128},
                             "nodeParent":82,
@@ -4766,6 +4756,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":760,"width":248,"var":"mingGang3","height":128},
                             "nodeParent":82,
@@ -4882,6 +4873,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":254,"width":250,"var":"anGang3","height":128},
                             "nodeParent":82,
@@ -4956,6 +4948,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":1031,"width":82,"var":"shou3","pivotY":-26,"height":128},
                             "nodeParent":82,
@@ -4967,6 +4960,7 @@
                             "compId":935,
                             "child":[
                                 {
+                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":0,"x":0,"skin":"ui/majiang/shou_bg.png"},
                                     "nodeParent":935,
@@ -4978,6 +4972,7 @@
                                     "compId":105,
                                     "child":[
                                         {
+                                            "x":75,
                                             "type":"Image",
                                             "props":{"y":0,"x":0,"var":"skin_shoupai3","skin":"ui/majiang/shou_32.png"},
                                             "nodeParent":105,
@@ -4992,30 +4987,31 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":1144,"width":82,"var":"fa3","pivotY":-26,"height":128},
                             "nodeParent":82,
                             "label":"Sprite(fa3)",
-                            "isOpen":false,
+                            "isOpen":true,
                             "isDirectory":true,
                             "isAniNode":true,
                             "hasChild":true,
                             "compId":1228,
                             "child":[
                                 {
+                                    "x":60,
                                     "type":"Image",
-                                    "props":{"y":0,"x":0,"width":82,"skin":"ui/majiang/shou_bg.png","height":128},
+                                    "props":{"y":0,"x":0,"width":82,"var":"fa3Image","skin":"ui/majiang/shou_bg.png","height":128},
                                     "nodeParent":1228,
-                                    "label":"Image",
-                                    "isOpen":{
-
-                                    },
+                                    "label":"Image(fa3Image)",
+                                    "isOpen":true,
                                     "isDirectory":true,
                                     "isAniNode":true,
                                     "hasChild":true,
                                     "compId":328,
                                     "child":[
                                         {
+                                            "x":75,
                                             "type":"Image",
                                             "props":{"y":0,"x":0,"skin":"ui/majiang/shou_0.png"},
                                             "nodeParent":328,
@@ -5025,9 +5021,12 @@
                                             "hasChild":false,
                                             "compId":329,
                                             "child":[
-                                                ]
-                                        }]
-                                }]
+                                                ],
+                                            "$HIDDEN":false
+                                        }],
+                                    "$HIDDEN":false
+                                }],
+                            "$HIDDEN":false
                         }]
                 },
                 {
