delete server_create_room_ok, don't need

--- a/client/laya/pages/test/GameTable.ui
+++ b/client/laya/pages/test/GameTable.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":105,
-    "selecteID":106,
+    "selectedBox":82,
+    "selecteID":1228,
     "props":{"width":1920,"var":"turntableDong","text":"剩余：7盘","sizeGrid":"70,70,70,70,1","sceneColor":"#000000","sceneBg":"laya/views/test/GameTable.jpg","height":1080},
     "nodeParent":-1,
     "label":"View(turntableDong)",
@@ -4998,9 +4998,9 @@
                                 {
                                     "x":60,
                                     "type":"Image",
-                                    "props":{"y":0,"x":0,"width":82,"var":"fa3Image","skin":"ui/majiang/shou_bg.png","height":128},
+                                    "props":{"y":0,"x":0,"width":82,"skin":"ui/majiang/shou_bg.png","height":128},
                                     "nodeParent":1228,
-                                    "label":"Image(fa3Image)",
+                                    "label":"Image",
                                     "isOpen":true,
                                     "isDirectory":true,
                                     "isAniNode":true,
@@ -5010,9 +5010,9 @@
                                         {
                                             "x":75,
                                             "type":"Image",
-                                            "props":{"y":0,"x":0,"skin":"ui/majiang/shou_0.png"},
+                                            "props":{"y":0,"x":0,"var":"fa3Image","skin":"ui/majiang/shou_0.png"},
                                             "nodeParent":328,
-                                            "label":"Image",
+                                            "label":"Image(fa3Image)",
                                             "isDirectory":false,
                                             "isAniNode":true,
                                             "hasChild":false,
