--- a/client/laya/pages/test/GameTable.ui
+++ b/client/laya/pages/test/GameTable.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":229,
-    "selecteID":255,
+    "selectedBox":1187,
+    "selecteID":1305,
     "referenceLines":null,
     "props":{"width":1920,"var":"turntableDong","text":"剩余：7盘","sizeGrid":"70,70,70,70,1","sceneColor":"#000000","sceneBg":"laya/views/test/GameTable.jpg","height":1080},
     "nodeParent":-1,
@@ -1613,15 +1613,16 @@
                     "props":{"y":100,"x":1700,"width":104,"var":"shouPai2","scaleY":0.65,"scaleX":-0.65,"height":1102},
                     "nodeParent":8,
                     "label":"Sprite(shouPai2)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":1187,
                     "child":[
                         {
+                            "x":45,
                             "type":"Image",
-                            "props":{"y":0,"x":0,"var":"test_shoupai2","skin":"ui/majiang/ce_bg.png"},
+                            "props":{"y":0,"x":0,"visible":false,"var":"test_shoupai2","skin":"ui/majiang/ce_bg.png"},
                             "nodeParent":1187,
                             "label":"Image(test_shoupai2)",
                             "isOpen":null,
@@ -1644,6 +1645,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":104,"var":"chi2","height":212},
                             "nodeParent":1187,
@@ -1725,6 +1727,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":412,"x":0,"width":104,"var":"anGangHide2","height":207},
                             "nodeParent":1187,
@@ -1785,6 +1788,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":208,"x":0,"width":104,"var":"anGang2","height":207},
                             "nodeParent":1187,
@@ -1856,6 +1860,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":616,"x":0,"width":104,"var":"mingGang2","height":212},
                             "nodeParent":1187,
@@ -1960,6 +1965,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":828,"x":0,"width":53,"var":"shou2","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":1187,
@@ -1972,6 +1978,7 @@
                                 ]
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":970,"x":0,"width":53,"var":"fa2","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":1187,
@@ -1991,14 +1998,13 @@
                     "props":{"y":287,"x":260,"width":177,"var":"out0","height":477},
                     "nodeParent":8,
                     "label":"Sprite(out0)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":556,
                     "child":[
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":106,"scaleY":0.65,"scaleX":0.65},
                             "nodeParent":556,
@@ -2299,7 +2305,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":36,"scaleY":0.65,"scaleX":0.65},
                             "nodeParent":556,
@@ -4424,14 +4429,13 @@
                     "props":{"y":839,"x":99,"width":1324,"var":"shouPai3","scaleY":1.3,"scaleX":1.3,"height":172},
                     "nodeParent":8,
                     "label":"Sprite(shouPai3)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":82,
                     "child":[
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":0,"width":250,"var":"chi3","height":128},
                             "nodeParent":82,
@@ -4513,7 +4517,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":508,"width":250,"var":"anGangHide3","height":128},
                             "nodeParent":82,
@@ -4574,7 +4577,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":760,"width":248,"var":"mingGang3","height":128},
                             "nodeParent":82,
@@ -4679,7 +4681,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":254,"width":250,"var":"anGang3","height":128},
                             "nodeParent":82,
@@ -4751,7 +4752,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":82,"var":"shou3","pivotY":-26,"name":"shou3pai","height":128},
                             "nodeParent":82,
@@ -4787,7 +4787,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":1200,"width":82,"var":"fa3","pivotY":-26,"height":128},
                             "nodeParent":82,
