--- a/client/laya/pages/test/GameTable.ui
+++ b/client/laya/pages/test/GameTable.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":556,
-    "selecteID":457,
+    "selectedBox":330,
+    "selecteID":331,
     "referenceLines":null,
     "props":{"width":1920,"var":"turntableDong","text":"剩余：7盘","sizeGrid":"70,70,70,70,1","sceneColor":"#000000","sceneBg":"laya/views/test/GameTable.jpg","height":1080},
     "nodeParent":-1,
@@ -874,14 +874,13 @@
                     "props":{"y":93,"x":192,"width":104,"var":"shouPai0","scaleY":0.65,"scaleX":0.65,"height":1102},
                     "nodeParent":8,
                     "label":"Sprite(shouPai0)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":229,
                     "child":[
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":-3,"x":0,"visible":false,"var":"test_shoupai0","skin":"ui/majiang/ce_bg.png"},
                             "nodeParent":229,
@@ -906,7 +905,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":104,"var":"peng0","height":212.00000000000006},
                             "nodeParent":229,
@@ -991,7 +989,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":412,"x":0,"width":104,"var":"anGangHide0","height":207},
                             "nodeParent":229,
@@ -1052,7 +1049,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":208,"x":0,"width":104,"var":"anGang0","height":207},
                             "nodeParent":229,
@@ -1124,7 +1120,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":616,"x":0,"width":104,"var":"mingGang0","height":212},
                             "nodeParent":229,
@@ -1229,7 +1224,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":828,"x":0,"width":53,"var":"shou0","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":229,
@@ -1242,7 +1236,6 @@
                                 ]
                         },
                         {
-                            "x":45,
                             "type":"Image",
                             "props":{"y":970,"x":0,"width":53,"var":"fa0","skin":"ui/majiang/ce_li.png","height":132},
                             "nodeParent":229,
@@ -1262,17 +1255,18 @@
                     "props":{"y":0,"x":618,"width":1227,"var":"shouPai1","scaleY":0.8,"scaleX":0.8,"height":194},
                     "nodeParent":8,
                     "label":"Sprite(shouPai1)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":330,
                     "child":[
                         {
+                            "x":45,
                             "type":"Sprite",
-                            "props":{"y":72,"x":0,"width":248,"var":"chi1","height":128},
+                            "props":{"y":72,"x":0,"width":248,"var":"peng1","height":128},
                             "nodeParent":330,
-                            "label":"Sprite(chi1)",
+                            "label":"Sprite(peng1)",
                             "isOpen":null,
                             "isDirectory":true,
                             "isAniNode":true,
@@ -1350,6 +1344,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":72,"x":255,"width":248,"var":"anGang1","height":128},
                             "nodeParent":330,
@@ -1421,6 +1416,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":73.00000000000004,"x":511,"width":248,"var":"anGangHide1","height":128},
                             "nodeParent":330,
@@ -1481,6 +1477,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":72,"x":766.9999999999998,"width":248,"var":"mingGang1","height":128},
                             "nodeParent":330,
@@ -1585,6 +1582,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":72,"x":1028,"width":85,"var":"shou1","skin":"ui/majiang/zheng_li.png","height":125},
                             "nodeParent":330,
@@ -1597,6 +1595,7 @@
                                 ]
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":72,"x":1142,"width":85,"var":"fa1","skin":"ui/majiang/zheng_li.png","height":125},
                             "nodeParent":330,
@@ -1997,14 +1996,13 @@
                     "props":{"y":287,"x":260,"width":177,"var":"out0","height":477},
                     "nodeParent":8,
                     "label":"Sprite(out0)",
-                    "isOpen":true,
+                    "isOpen":false,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":556,
                     "child":[
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":106,"scaleY":0.65,"scaleX":0.65},
                             "nodeParent":556,
@@ -2016,7 +2014,6 @@
                             "compId":1013,
                             "child":[
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":0,"x":0,"var":"outPai2","skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2041,7 +2038,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":59,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2066,7 +2062,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":117,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2091,7 +2086,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":175,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2116,7 +2110,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":234,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2141,7 +2134,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":293,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2166,7 +2158,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":351,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2191,7 +2182,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":409,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2216,7 +2206,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":467,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2241,7 +2230,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":526,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2266,7 +2254,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":584,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2291,7 +2278,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":642,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":1013,
@@ -2317,7 +2303,6 @@
                                 }]
                         },
                         {
-                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":36,"scaleY":0.65,"scaleX":0.65},
                             "nodeParent":556,
@@ -2329,7 +2314,6 @@
                             "compId":457,
                             "child":[
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":0,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2354,7 +2338,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":59,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2379,7 +2362,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":117,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2404,7 +2386,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":175,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2429,7 +2410,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":234,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2454,7 +2434,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":293,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2479,7 +2458,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":351,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2504,7 +2482,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":409,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2529,7 +2506,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":467,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2554,7 +2530,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":526,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2579,7 +2554,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":584,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -2604,7 +2578,6 @@
                                         }]
                                 },
                                 {
-                                    "x":60,
                                     "type":"Image",
                                     "props":{"y":642,"x":0,"skin":"ui/majiang/ce_bg.png"},
                                     "nodeParent":457,
@@ -3243,7 +3216,7 @@
                                         }]
                                 }]
                         }],
-                    "$HIDDEN":true
+                    "$HIDDEN":false
                 },
                 {
                     "x":30,
@@ -3857,7 +3830,7 @@
                                         }]
                                 }]
                         }],
-                    "$HIDDEN":true
+                    "$HIDDEN":false
                 },
                 {
                     "x":30,
@@ -4454,13 +4427,14 @@
                     "props":{"y":839,"x":99,"width":1324,"var":"shouPai3","scaleY":1.3,"scaleX":1.3,"height":172},
                     "nodeParent":8,
                     "label":"Sprite(shouPai3)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
                     "compId":82,
                     "child":[
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":0,"width":250,"var":"peng3","height":128},
                             "nodeParent":82,
@@ -4545,6 +4519,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":508,"width":250,"var":"anGangHide3","height":128},
                             "nodeParent":82,
@@ -4605,6 +4580,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":760,"width":248,"var":"mingGang3","height":128},
                             "nodeParent":82,
@@ -4709,6 +4685,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":26,"x":254,"width":250,"var":"anGang3","height":128},
                             "nodeParent":82,
@@ -4780,6 +4757,7 @@
                                 }]
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":0,"width":82,"var":"shou3","pivotY":-26,"name":"shou3pai","height":128},
                             "nodeParent":82,
@@ -4813,9 +4791,10 @@
                                                 ]
                                         }]
                                 }],
-                            "$HIDDEN":true
+                            "$HIDDEN":false
                         },
                         {
+                            "x":45,
                             "type":"Sprite",
                             "props":{"y":0,"x":1200,"width":82,"var":"fa3","pivotY":-26,"height":128},
                             "nodeParent":82,
@@ -4849,7 +4828,7 @@
                                                 ]
                                         }]
                                 }],
-                            "$HIDDEN":true
+                            "$HIDDEN":false
                         }]
                 },
                 {
